Fix image stretching

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -18,7 +18,7 @@
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
-[data-theme='dark'] {
+[data-theme="dark"] {
   --ifm-color-primary: #ec008c;
   --ifm-color-primary-dark: #d4007e;
   --ifm-color-primary-darker: #c90077;
@@ -27,4 +27,9 @@
   --ifm-color-primary-lighter: #ff109e;
   --ifm-color-primary-lightest: #ff34ac;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+}
+
+img {
+  width: auto;
+  height: auto;
 }
